[gd_scene load_steps=7 format=3 uid="uid://dh4mqims6sdo"]

[ext_resource type="Script" path="res://Scripts/UI/entity_skills_ui.gd" id="1_mor60"]
[ext_resource type="Texture2D" uid="uid://dqn6whddr1102" path="res://Ressources/Sprite/UI/inventory_background.png" id="2_teepv"]
[ext_resource type="PackedScene" uid="uid://d2excqtsf861v" path="res://Scenes/UI/skill_list_item.tscn" id="3_r35gs"]
[ext_resource type="PackedScene" uid="uid://bgvx1mtqn1g7d" path="res://Scenes/UI/availllable_skill_list_item.tscn" id="4_7vdoo"]
[ext_resource type="Texture2D" uid="uid://dgf6fh0w2oapg" path="res://Ressources/Sprite/UI/Buttons/learn_skill_button.png" id="5_x2qte"]
[ext_resource type="Texture2D" uid="uid://c8ea5b1y2sh2k" path="res://Ressources/Sprite/UI/Buttons/learn_skill_button_pressed.png" id="6_kcttp"]

[node name="EntitySkillsUI" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mor60")

[node name="LearnSkillButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -159.0
offset_top = -163.0
offset_right = -44.0
offset_bottom = -138.0
texture_normal = ExtResource("5_x2qte")
texture_pressed = ExtResource("6_kcttp")

[node name="SkillsNinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -137.0
offset_right = 168.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_teepv")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="SkillsList" type="ScrollContainer" parent="SkillsNinePatchRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 326.0
offset_bottom = 194.0

[node name="SkillListVBox" type="VBoxContainer" parent="SkillsNinePatchRect/SkillsList"]
layout_mode = 2

[node name="SkillListItem" parent="SkillsNinePatchRect/SkillsList/SkillListVBox" instance=ExtResource("3_r35gs")]
layout_mode = 2
size_flags_vertical = 8

[node name="AvailableSkillsNinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -137.0
offset_right = -169.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_teepv")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="AvailableSkillsList" type="ScrollContainer" parent="AvailableSkillsNinePatchRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 594.0
offset_bottom = 1045.0
scale = Vector2(0.2, 0.2)

[node name="AvailableSkillListVBox" type="VBoxContainer" parent="AvailableSkillsNinePatchRect/AvailableSkillsList"]
custom_minimum_size = Vector2(575, 100)
layout_mode = 2

[node name="AvailableSkillListItem" parent="AvailableSkillsNinePatchRect/AvailableSkillsList/AvailableSkillListVBox" instance=ExtResource("4_7vdoo")]
layout_mode = 2

[connection signal="pressed" from="LearnSkillButton" to="." method="_on_learn_skill_button_pressed"]
